--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "git add . && git commit -m \"Auto-update\" && git push"
+    "deploy": "git add . && (git commit -m \"Auto-update\" || echo No changes to commit) && git push"
   },
   "dependencies": {
     "lucide-react": "^0.555.0",
