fix: update vercel.json to build from Web directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+    "buildCommand": "cd Web && npm run build",
+    "outputDirectory": "Web/dist",
+    "installCommand": "cd Web && npm install",
+    "framework": null,
     "rewrites": [
         {
             "source": "/(.*)",
