--- a/Web/package.json
+++ b/Web/package.json
@@ -11,6 +11,7 @@
     "deploy": "git add . && (git commit -m \"Auto-update\" || echo No changes to commit) && git push"
   },
   "dependencies": {
+    "@portabletext/react": "^6.0.2",
     "@sanity/client": "^7.14.0",
     "@sanity/image-url": "^2.0.3",
     "lucide-react": "^0.555.0",
