feat: Implement and refine Course Calculator component

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "deploy": "git add . && (git commit -m \"Auto-update\" || echo No changes to commit) && git push"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0"
   },
