--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "buildCommand": "cd Web && npm run build",
-    "outputDirectory": "Web/dist",
-    "installCommand": "cd Web && npm install",
-    "framework": null,
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "installCommand": "npm install",
+    "framework": "vite",
     "rewrites": [
         {
             "source": "/(.*)",
