--- a/Web/package.json
+++ b/Web/package.json
@@ -14,8 +14,10 @@
     "@portabletext/react": "^6.0.2",
     "@sanity/client": "^7.14.0",
     "@sanity/image-url": "^2.0.3",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0"
   },
